# precificador

./: .gitignore  README.md  TestesDerivx.ipynb  VALIDATION.md  ci-workflow-mpl.patch  pyproject.toml  pytest.ini  update-readme.patch  whitepaper.patch  whitepaper.tex
.github/workflows/: ci.yml
examples/: european_call.py  smoke.py  validate_simple.py  validate_to_md.py
scripts/: oneclick.ps1
src/derivx/: __init__.py  curves.py
src/derivx/analytic/: __init__.py  bs.py  haug.py
src/derivx/dsl/: spec.py
src/derivx/engine/: montecarlo.py
src/derivx/exercise/: lsmc.py
src/derivx/ir/: __init__.py  black76.py
src/derivx/models/: gbm.py
src/derivx/payoffs/: core.py  extra.py
src/derivx/report/: __init__.py  plot.py  test_plot_report.py
tests/: test_api_smoke.py  test_barrier_asian_relations.py  test_bs_consistency.py  test_dsl_smoke.py  test_heston_mc_vs_fft.py  test_lsmc_vs_crr.py  test_mc_gbm_vs_bs.py  test_properties.py  test_put_call_parity.py
tests/ir/: test_ir_black76.py
tests/ref_formulas/: closed_form.py  digitals.py  gap.py  margrabe.py  test_haug_gap.py
tests/reference/: test_haug_asian_arith_levy.py  test_haug_digitals.py  test_haug_vanilla_bs.py  test_margrabe_exchange.py
tests/report/: test_plot_report.py
tests/report/_artifacts/: asian_mc.json  cap_ir.json  digital_cash_call.json  exchange_margrabe.json  vanilla_call_analytic.json
whitepaper/: derivx_whitepaper.aux  derivx_whitepaper.out  derivx_whitepaper.tex  derivx_whitepaper.toc
