[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derivx"
dynamic = ["version"]
description = "Generic derivative pricer via composable building blocks (MC + LSMC)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Walter C Neto" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=23",
  "ruff>=0.4",
  "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/<seu-usuario>/derivx"
Issues = "https://github.com/<seu-usuario>/derivx/issues"

[tool.setuptools]
package-dir = { "" = "src" }
version = { attr = "derivx._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["derivx*"]

[tool.ruff]
line-length = 100
target-version = "py39"