[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derivx-quant"
description = "Precificador de derivativos (equities/IR) com MC/LSMC, PDE e FFT + DSL."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Walter C. Neto" }]
dynamic = ["version"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Office/Business :: Financial",
]

# Dependências mínimas em runtime
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
# para os relatórios/plots
viz = ["matplotlib>=3.7"]
# para desenvolvimento
dev = [
  "pytest>=7.0",
  "pytest-cov">=4.1,
  "matplotlib>=3.8",
  "build",
  "twine",
  "ruff",
  "black",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["derivx*"]

[tool.setuptools.dynamic]
version = { attr = "derivx._version.__version__" }
